src/styles/_top.scss
.top {
  a {
    font-weight: normal;
    font-size: 20px;
    line-height: 23px;
    text-align: center;
    color: #000 !important;
    text-decoration: none !important;
  }

  p {
    font-weight: normal;
    font-size: 20px;
    line-height: 23px;
    text-align: center;
    text-decoration: none !important;
    margin: 0;
    color: #B5CAB8;
    cursor: not-allowed;
  }

  a:hover {
    font-weight: bold;
    text-decoration: underline !important;
  }

  a:focus {
    font-weight: bold;
    text-decoration: underline !important;
  }
}

